WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179736
ReloadFromOrigin loads should not select any service worker
https://bugs.webkit.org/show_bug.cgi?id=179736
Summary
ReloadFromOrigin loads should not select any service worker
youenn fablet
Reported
2017-11-15 10:31:06 PST
ReloadFromOrigin loads should not select any service worker as per
https://w3c.github.io/ServiceWorker/#handle-fetch
step 11.3
Attachments
Patch
(7.10 KB, patch)
2017-11-15 10:33 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-11-15 10:33:56 PST
Created
attachment 326995
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-15 14:57:02 PST
Comment on
attachment 326995
[details]
Patch Clearing flags on attachment: 326995 Committed
r224902
: <
https://trac.webkit.org/changeset/224902
>
WebKit Commit Bot
Comment 3
2017-11-15 14:57:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 15:06:02 PST
<
rdar://problem/35572728
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug