ReloadFromOrigin loads should not select any service worker https://bugs.webkit.org/show_bug.cgi?id=179736

Patch by Youenn Fablet <youenn@apple.com> on 2017-11-15
Reviewed by Brady Eidson.

Source/WebCore:

Test: http/tests/workers/service/shift-reload-navigation.html

In case of ReloadFromOrigin (equivalent of shift reload), do not select any service worker.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::startLoadingMainResource):
* loader/FrameLoader.h:
(WebCore::FrameLoader::isReloadingFromOrigin const):

LayoutTests:

* http/tests/workers/service/resources/shift-reload-navigation.js: Added.
(async.test):
* http/tests/workers/service/shift-reload-navigation-expected.txt: Added.
* http/tests/workers/service/shift-reload-navigation.html: Added.

Canonical link: https://commits.webkit.org/195779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224902 268f45cc-cd09-0410-ab3c-d52691b4dbfc